ClienteView, carrusel tours listo
Faltaría ver tour y crear factura.